Module register user

--- a/Attendance-fronted/src/app/components/employee/registeremploye/registeremploye.component.html
+++ b/Attendance-fronted/src/app/components/employee/registeremploye/registeremploye.component.html
@@ -59,7 +59,7 @@
                [(ngModel)]="model.age" name="age">
       </div>
 
-      <button type="submit" class="btn btn-success" [disabled]="!employeeForm.form.valid">Save</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!employeeForm.form.valid">Save</button>
       <button type="button" class="btn btn-default" (click)="newEmploye(); employeeForm.reset()">New Employe</button>
     </form>
   </div>
