--- a/Attendance-fronted/src/app/components/navbar/navbar.component.html
+++ b/Attendance-fronted/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a routerLink="/assistance" routerLinkActive="active">Assistance</a></li>
+            <li><a routerLink="/attendance" routerLinkActive="active">Attendance</a></li>
             <li><a routerLink="/createmployee" routerLinkActive="active">Register Employee</a></li>
             <li><a routerLink="/employees" routerLinkActive="active">Employees</a></li>
             <li><a routerLink="/attendancereport" routerLinkActive="active">Attendance Report</a></li>
