--- a/Attendance-fronted/src/app/components/home/home.component.html
+++ b/Attendance-fronted/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h1>Jumbotron</h1>
+  
+  <p>This is a test for cuemby process recluting , extra attention to featured content or information.</p>
+  
+</div>
