--- a/Attendance-fronted/src/app/components/employee/employees/employees.component.html
+++ b/Attendance-fronted/src/app/components/employee/employees/employees.component.html
@@ -32,7 +32,7 @@
 	      <td>{{employee.firstName}} {{employee.lastName}}</td>
 	      <td>{{employee.identification}}</td>
 	      <td>{{employee.position}}</td>
-	       <td>{{employee.salary}}</td>
+	       <td>{{employee.salary | currency}}</td>
 	        <td>{{employee.birthdate | date:"yyyy/MM/dd"}}</td>
 	         <td>{{employee.dateAdmission | date:"yyyy/MM/dd"}}</td>
 	         <td>{{employee.age}}</td>
