--- a/Attendance-fronted/src/app/components/home/home.component.html
+++ b/Attendance-fronted/src/app/components/home/home.component.html
@@ -1,6 +1,14 @@
 <div class="jumbotron">
-  <h1>Jumbotron</h1>
+  <h1>TECHNICAL TEST JAVA.</h1>
   
-  <p>This is a test for cuemby process recluting , extra attention to featured content or information.</p>
-  
+  <p>A company wants to build a system where it can take control of the assistance of its employees, for it must do certain functionalities demarcated below:
+</p>
+<ul>
+	<li> Build functionality for employee records</li>
+	<li> Build functionality to terminate a retired employee</li>
+	<li>Form for assistance</li>
+	<li>Report of attendance in a period of one week and one month.</li>
+</ul>
+
+
 </div>
