--- a/Attendance-fronted/src/app/components/navbar/navbar.component.html
+++ b/Attendance-fronted/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <a class="navbar-brand" routerLink="/">Attendance Test </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li><a routerLink="/attendance" routerLinkActive="active">Attendance</a></li>
             <li><a routerLink="/createmployee" routerLinkActive="active">Register Employee</a></li>
             <li><a routerLink="/employees" routerLinkActive="active">Employees</a></li>
