Add Config for Circleci

--- a/Attendance-fronted/src/app/components/home/home.component.html
+++ b/Attendance-fronted/src/app/components/home/home.component.html
@@ -10,5 +10,8 @@
 	<li>Report of attendance in a period of one week and one month.</li>
 </ul>
 
+	<p>by @fatdor</p>
+
+	<p>You can see the source code here <a class="btn btn-primary" href="https://github.com/faltdor/attendance-api-test"  target="blank">@faldor</a></p>
 
 </div>
