--- a/Attendance-fronted/src/app/components/employee/registeremploye/registeremploye.component.html
+++ b/Attendance-fronted/src/app/components/employee/registeremploye/registeremploye.component.html
@@ -16,7 +16,7 @@
         <input type="text" class="form-control" id="firstName"
                required
                [(ngModel)]="model.firstName" name="firstName"
-               #firstName="ngModel">
+               #firstName="ngModel" min="3" max="255">
         <div [hidden]="firstName.valid || firstName.pristine"
              class="alert alert-danger">
           Name is required
@@ -26,37 +26,38 @@
       <div class="form-group">
         <label for="lastName">Last Name</label>
         <input type="text" class="form-control" id="lastName"
-               [(ngModel)]="model.lastName" name="lastName">
+               [(ngModel)]="model.lastName" name="lastName" min="3" max="255" required>
       </div>
 
       <div class="form-group">
         <label for="identification">Identification</label>
         <input type="text" class="form-control" id="identification"
-               [(ngModel)]="model.identification" name="identification">
+               [(ngModel)]="model.identification" name="identification" min="3" max="20" required>
       </div>
 
       <div class="form-group">
         <label for="position">Position</label>
         <input type="text" class="form-control" id="position"
-               [(ngModel)]="model.position" name="position">
+               [(ngModel)]="model.position" name="position" required>
+        
       </div>
 
       <div class="form-group">
         <label for="salary">Salary</label>
         <input type="number" class="form-control" id="salary"
-               [(ngModel)]="model.salary" name="salary">
+               [(ngModel)]="model.salary" name="salary" required>
       </div>
 
       <div class="form-group">
         <label for="birthdate">Birthdate</label>
         <input type="date" class="form-control" id="birthdate"
-               [(ngModel)]="model.birthdate" name="birthdate">
+               [(ngModel)]="model.birthdate" name="birthdate" required>
       </div>
     
       <div class="form-group">
         <label for="age">Age</label>
         <input type="number" class="form-control" id="age"
-               [(ngModel)]="model.age" name="age">
+               [(ngModel)]="model.age" name="age" min="1" max="120" required>
       </div>
 
       <button type="submit" class="btn btn-primary" [disabled]="!employeeForm.form.valid">Save</button>
