--- a/Attendance-fronted/src/app/components/attendance/attenddancereport/attenddancereport.component.html
+++ b/Attendance-fronted/src/app/components/attendance/attenddancereport/attenddancereport.component.html
@@ -44,6 +44,7 @@
 <div class="panel panel-default" *ngIf="employees">
   <div class="panel-heading">Active Employees</div>
   <div class="panel-body">
+   <div class="table-responsive">
    <table class="table table-striped table-hover ">
 	  <thead>
 	    <tr>
@@ -66,6 +67,7 @@
 	    </tr>
 	    </tbody>
 	 </table>
+	 </div>
   </div>
 </div>
 
